--- a/style.css
+++ b/style.css
@@ -1,32 +1,35 @@
 body {
-    font-family: , sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, .6)), url(assets/header-img.jpg);
+header {
+    background-image: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url(assets/header-img.jpg);
     background-size: cover;
     background-position: 50%;
     height: 90vh;
 }
 
-nav img{
+/* navbar */
+
+nav img {
     width: 13%;
 }
 
-.red-btn{
-    background-color: rgb(229, 9, 20);
-    color: rgb(255, 255, 255);
+.red-btn {
+    background: rgb(229, 9, 20);
+    color: #fff;
     border: 0;
     border-radius: 0.25rem;
     padding: 5px 17px;
 }
 
-.red-btn:hover{
-    background-color: rgb(193, 17, 25);
+.red-btn:hover {
+    background: rgb(193, 17, 25);
 }
 
+/* hero section */
 
-.red-title{
+.hero-title {
     font-size: 3rem;
     font-weight: 900;
 }
@@ -36,17 +39,17 @@ nav img{
     font-weight: 400;
 }
 
-.hero-second-p{
+.hero-second-p {
     font-size: 1.25rem;
     font-weight: 400;
-    line-height: 1.875 rem;
+    line-height: 1.875rem;
 }
 
-form{
+form {
     width: 60%;
 }
 
-form #floatingInput{
+form #floatingInput {
     color: #fff;
 }
 
@@ -73,28 +76,30 @@ form #floatingInput {
 }
 
 form label {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 0.7);
     margin-left: 10px;
 }
 
-.get-started-btn{
+.get-started-btn {
     height: 60px;
     font-size: 1.5rem;
     padding-right: 25px;
     padding-left: 25px;
 }
 
-.get-started-btn::after{
-    content:"\276F";
+.get-started-btn::after {
+    content: "\276F";
     margin-left: 5px;
 }
 
-.purple-section{
+/* purple section */
+
+.purple-section {
     transform: translateY(-50%);
     width: 100%;
 }
 
-.purple-section .container-md{
+.purple-section .container-md {
     background: radial-gradient(51.39% 511.66% at 47.68% -217.91%, #ff9900 0%, #e50914 17.27%, #0e1b4f 79.44%, #000413 100%);
     box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.5);
     border-radius: 4px;
@@ -103,12 +108,12 @@ form label {
     padding: 22px;
 }
 
-.purple-section img{
+.purple-section img {
     width: 25%;
     height: fit-content;
 }
 
-.purple-section p:first-of-type{
+.purple-section p:first-of-type {
     font-size: 20px;
     font-weight: 500;
     line-height: 30px;
@@ -122,44 +127,49 @@ form label {
     margin-bottom: 8px;
 }
 
-.purple-section a{
+.purple-section a {
     color: #448ef4;
     font-weight: 500;
 }
 
-.purple-section a::after{
+.purple-section a::after {
     content: "\276F";
     margin-left: 10px;
 }
+
+/* enjoy section */
 
 .section-title {
     font-size: 3rem;
     font-weight: 900;
 }
 
-.section-paragraph{
+.section-paragraph {
     font-size: 1.5rem;
     font-weight: 400;
 }
 
-.watch-section, .download-section{
+.watch-section,
+.download-section {
     border-top: 5px solid #232323;
     border-bottom: 5px solid #232323;
 }
 
-.faq-section h3{
+/* faq section */
+
+.faq-section h3 {
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.875rem;
 }
 
-.faq-section button{
+.faq-section button {
     color: #fff;
     font-size: 24px;
     font-weight: 400;
 }
 
-.faq-section .accordion{
+.faq-section .accordion {
     --bs-accordion-color: rgb(255, 255, 255);
     --bs-accordion-bg: rgb(45, 45, 45);
     --bs-accordion-border-color: none;
@@ -176,16 +186,16 @@ form label {
     box-shadow: none;
 }
 
-.faq-section .accordion-button:hover{
-    background-color: rgb(65, 65, 65);
+.faq-section .accordion-button:hover {
+    background-color: rgb(65,65,65);
 }
 
 .faq-section .accordion-button:not(.collapsed) {
-    background-color: rgb(65, 65, 65);
-    color: rgb(255, 255, 255)
+    background-color: rgb(65,65,65);
+    color: rgb(255,255,255);
 }
 
-.faq-section .accordion-button:after {
+.faq-section .accordion-button::after {
     content: "+";
     background-image: none;
     position: absolute;
@@ -195,11 +205,13 @@ form label {
     right: 45px;
 }
 
-.faq-section .accordion-button:not(.collapsed)::after{
+.faq-section .accordion-button:not(.collapsed)::after {
     background-image: none;
     transform: none;
     content: "\00d7";
 }
+
+/* footer */
 
 footer {
     border-top: 5px solid #232323;
@@ -218,7 +230,6 @@ footer ul {
 
 footer li {
     list-style-type: none;
-    color: #232323;
 }
 
 footer select {
@@ -244,4 +255,75 @@ footer .arrow-down {
     border-top: 5px solid #fff;
     top: 15px;
     right: -115px;
+}
+
+/* mobile */
+
+@media only screen and (max-width: 992px) {
+    nav img {
+        width: 17%;
+    }
+
+    .hero-title,
+    .section-title {
+        font-size: 2rem;
+        font-weight: 700;
+    }
+
+    .hero-first-p,
+    .hero-second-p,
+    .section-paragraph,
+    .faq-section h3 {
+        font-size: 1.125rem;
+    }
+
+    .purple-section img {
+        width: 50%;
+    }
+
+    .enjoy-section .container {
+        padding-top: 5rem;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    nav img {
+        width: 25%;
+    }
+
+    header {
+        height: 100vh;
+    }
+
+    .purple-section .container-md {
+        background: radial-gradient(120.35% 220% at 49.86% -6.29%, #e50914 0%, #0e1b4f 46.15%, #0d1121 100%);
+        padding-top: 4rem;
+        margin: 0 24px;
+    }
+
+    .purple-section img {
+        position: fixed;
+        width: 15%;
+        top: -50px;
+        left: 45px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    nav img {
+        width: 35%;
+    }
+
+    header {
+        height: 110vh;
+    }
+
+    form .form-floating {
+        width: 90%;
+    }
+
+    .purple-section img {
+        width: 20%;
+        top: -45px;
+    }
 }
